--- a/src/components/CardGame/styles.css
+++ b/src/components/CardGame/styles.css
@@ -1,4 +1,46 @@
 .card {
   width: 365px;
-  background-color: green;
+  background-color: #eeeeee;
+  border-radius: 24px;
+
+  cursor: pointer;
+}
+
+.game-content h2,
+.game-content p,
+.game-content h3 {
+  font-family: sans-serif;
+}
+
+.game-image {
+  border-radius: 24px 24px 0 0;
+}
+
+.game-content {
+  padding: 12px;
+}
+
+.game-title {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 0.2em;
+}
+
+.game-genre {
+  font-size: 14px;
+  margin-bottom: 0.4em;
+}
+
+.platform-list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  list-style-type: none;
+}
+.platform-list li {
+  margin: 0 0.4em 0 0;
+}
+.platform-list svg {
+  font-size: 1.2em;
+  color: 393e46;
 }
