--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: black;
-  color: white;
+  background-color: #393e46;
+  color: #393e46;
   height: max-content;
   width: 100vw;
   gap: 30px;
