--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,5 +1,5 @@
-.header-container {
+.footer-container {
   width: 100vw;
   height: 80px;
-  background-color: grey;
+  background-color: #222831;
 }
