--- a/src/components/Filter/styles.css
+++ b/src/components/Filter/styles.css
@@ -6,6 +6,9 @@
   row-gap: 40px;
 }
 
-h1 {
+.filter-container h1 {
+  font-family: sans-serif;
+  font-size: 32px;
+  font-weight: 600;
   color: #eeeeee;
 }
