--- a/src/components/CardGame/styles.css
+++ b/src/components/CardGame/styles.css
@@ -1,15 +1,15 @@
 .card {
   width: 365px;
-  background-color: #eeeeee;
+  background-color: #222831;
+  color: #eeeeee;
   border-radius: 24px;
 
   cursor: pointer;
 }
 
 .card:hover {
-  background-color: #222831;
-  color: #eeeeee;
   transition: 0.3s ease-out;
+  filter: brightness(0.8);
 }
 
 .game-content h2,
