Ajuste de proporção de tela

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,10 +1,15 @@
 .header-container {
+  width: 100vw;
+  height: 80px;
+  position: fixed;
+  background-color: #222831;
+  z-index: 1;
+}
+.header-container div {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  height: 80px;
-  background-color: #222831;
+  cursor: pointer;
 }
 
 .header-container svg {
