--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -2,11 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   background-color: #393e46;
   color: #393e46;
+
   height: max-content;
   width: 100vw;
-  gap: 30px;
-  padding-top: 30px;
-  padding-bottom: 220px;
+  min-height: 100vh;
+
+  gap: 2.6rem;
+
+  padding-top: 8rem;
+  padding-bottom: 10rem;
 }
