--- a/src/components/CardGame/styles.css
+++ b/src/components/CardGame/styles.css
@@ -2,6 +2,7 @@
   width: 365px;
   background-color: #222831;
   color: #eeeeee;
+
   border-radius: 24px;
 
   cursor: pointer;
@@ -13,9 +14,16 @@
 }
 
 .game-content h2,
-.game-content p,
 .game-content h3 {
   font-family: sans-serif;
+}
+
+.game-content h2 {
+  margin-bottom: 0.4em;
+}
+
+.game-content h3 {
+  margin-bottom: 0.5em;
 }
 
 .game-image {
