--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -3,3 +3,17 @@
   height: 80px;
   background-color: #222831;
 }
+.social-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100vw;
+  height: 100%;
+}
+.footer-container svg {
+  color: #eeeeee;
+  font-size: 2em;
+  margin-right: 12px;
+  cursor: pointer;
+}
