--- a/src/components/CardGame/styles.css
+++ b/src/components/CardGame/styles.css
@@ -1,7 +1,9 @@
 .card {
-  width: 365px;
+  width: 100%;
+  max-width: 365px;
   background-color: #222831;
   color: #eeeeee;
+  margin: 0 auto;
 
   border-radius: 24px;
 
