--- a/src/components/FilterSearch/styles.css
+++ b/src/components/FilterSearch/styles.css
@@ -1,5 +1,5 @@
 .game-search {
-  width: 628px;
+  width: 80%;
   height: 52px;
   text-align: center;
 
@@ -15,4 +15,10 @@
 .game-search::placeholder {
   text-align: center;
   font-style: italic;
+}
+
+@media screen and (min-width: 768px) {
+  .game-search {
+    width: 628px;
+  }
 }
