--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,6 +4,7 @@
   position: fixed;
   background-color: #222831;
   z-index: 1;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 .header-container div {
   display: flex;
