--- a/src/components/ContainerCard/styles.css
+++ b/src/components/ContainerCard/styles.css
@@ -5,3 +5,9 @@
   gap: 20px 20px;
   max-width: calc(3 * 365px + 60px);
 }
+
+@media (max-width: 375px) {
+  .container {
+    max-width: 300px;
+  }
+}
